--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,37 @@
 spring.application.name=GraphQL
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+# Database SQL Server
+spring.datasource.url=jdbc:sqlserver://THANHTAM:1433;databaseName=GraphQLDemo;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
 
-spring.graphql.schema-location-pattern=classpath:graphql/*.graphqls
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+# Hibernate
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.web.resources.static-locations=classpath:/static/,file:///D:/2025-2026/HK1/WEBDEV/LTW/springimg/
+
+
+# GraphQL
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
+spring.graphql.schema.locations=classpath:graphql/
+
+server.port=8088
+spring.thymeleaf.cache=false
+spring.messages.basename=i18n/messages
+spring.web.locale=vi_VN
+
+
+
+
+
